<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LIMON</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="system_info_title">System Information</string>
    <string name="calc_title">Calculator</string>
    <string name="mp3_player_title">Music Player</string>


    <string name="button_calc">Калькулятор</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_equal">=</string>
    <string name="button_ac">AC</string>
    <string name="button_back">Back</string>
    <string name="button_float">.</string>


    <string name="button_mp3b">MP3 Плеер</string>
    <string name="volBarMP3">Volume :</string>
    <string name="prevMp3">prev</string>
    <string name="nextMp3">next</string>
    <string name="pauseMp3">pause</string>
    <string name="playMp3">play</string>
    <string name="offPlayMp3">  offline play</string>
    <string name="permission_needed">Permission needed to play music</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_songs_found">No songs found</string>
    <string name="error_playing_song">Error playing song</string>
    <string name="pause">Pause</string>
    <string name="default_song_name">No song selected</string>
    <string name="play">Play</string>
    <string name="song_info_format">%1$s - %2$s</string>



    <string name="button_system_info">Локация</string>
    <string name="time_icon">Time icon</string>
    <string name="signal_icon">Signal icon</string>
    <string name="location_icon">Location icon</string>
    <string name="time_label">Time:</string>
    <string name="signal_label">Signal:</string>
    <string name="location_label">Location:</string>
    <string name="refresh_button">Refresh Data</string>
    <string name="current_time">Current Time: %s</string>
    <string name="signal_strength">%s dBm</string>
    <string name="location_coords">Lat: %s, Lon: %s</string>
    <string name="location_not_available">Not available</string>
    <string name="status_auto_saved">Last updated: %s</string>
    <string name="status_error_saving">Error saving data</string>
    <string name="error_saving_data">Failed to save data</string>
</resources>