<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="182dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="195dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonPrev"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="18dp"
            android:text="@string/prevMp3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPause"
            android:layout_width="100dp"
            android:layout_height="117dp"
            android:layout_margin="18dp"
            android:text="@string/pauseMp3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="18dp"
            android:text="@string/nextMp3" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/volumeBar"
        android:layout_width="395dp"
        android:layout_height="47dp" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="246dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switchControl"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/offPlayMp3"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewmp3"
            android:layout_width="293dp"
            android:layout_height="42dp"
            android:layout_margin="30dp"
            android:text="TextView" />

        <SeekBar
            android:id="@+id/remBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" />

    </LinearLayout>

</RelativeLayout>